syntax = "proto3";

package v1;

option go_package = "github.com/misshanya/url-shortener/gen/go/v1";

service URLShortenerService {
  rpc ShortenURL(ShortenURLRequest) returns (ShortenURLResponse);
  rpc ShortenURLBatch(ShortenURLBatchRequest) returns (ShortenURLBatchResponse);
  rpc GetURL(GetURLRequest) returns (GetURLResponse);
}

message ShortenURLRequest {
  string url = 1;
}

message ShortenURLResponse {
  string code = 1;
  string original_url = 2;
  string error = 3;
}

message ShortenURLBatchRequest {
  repeated ShortenURLRequest urls = 1;
}

message ShortenURLBatchResponse {
  repeated ShortenURLResponse urls = 1;
}

message GetURLRequest {
  string code = 1;
}

message GetURLResponse {
  string url = 1;
}